2013-11-222 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTLS.m:
	Set errno to EAGAIN if TLS layer fails in a non-fatal way during
	read/write.
	Add more/better debug logging.

2013-11-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: Fix for bug 40620
	Prevent recursion while parsing process arguments.

2013-11-19  Saso Kiselkov <skiselkov>

	Releasing a GSTLSHandle (created from +[NSFileHandle sslClass]) after
	the TLS handshake will result in a segfault. Fix it.

2013-11-18  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Headers/GNUstepBase/NSCalendarDate+GNUstepBase.m:
	* Source/Additions/NSCalendarDate+GNUstepBase.m:
	Add -isoYear method for compatibility with -weekOfYear

2013-11-07 Riccardo Mottola <rm@gnu.org>

	* Source/GSFormat.m
	* Source/NSException.m
	* Source/NSConnection.m
	Openbsd malloc.h warning fix.

2013-11-05 German Arias <germanandre@gmx.es>

	* Source/NSUndoManager.m (-undoActionName): Try first with the name
	of current group. If not, with the name of last object in undo stack.

2013-11-03 German Arias <germanandre@gmx.es>

	* Source/NSUndoManager.m (-redoMenuTitleForUndoActionName:):
	* Source/NSUndoManager.m (-undoMenuTitleForUndoActionName:):
	Return "Redo" and "Undo", respectively, if actionName is null.
	If not, it removes the item title.

2013-11-01  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/GSAttributedString.m: Use exact equality test when removing
        attribute dictionary from cache.  Prevents possibly removing the
        wrong dictionary in cases where dictionary contents are mutated
        while in the cache, such that two dictionaries become equal.

2013-10-30  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/GSDictionary.m: Add private class GSCachedDictionary which
        will raise an exception if deallocated without being uncached.
        * Source/GSAttributedString.m: Use GSCachedDictionary for attributes
        to aid in detection of things improperly releasing them.
