@@ -28,10 +28,10 @@ ifeq ($(BASE_MAKE_LOADED),)
     # FIXME - macro names
     #
     AUXILIARY_OBJCFLAGS += @NX_CONST_STRING_OBJCFLAGS@
-    ifeq ($(shared),no)
-      CONFIG_SYSTEM_LIBS += @LIBS@
-      CONFIG_SYSTEM_LIB_DIR += @LDIR_FLAGS@
-    endif
+
+    CONFIG_SYSTEM_LIBS += @LIBS@
+    CONFIG_SYSTEM_LIB_DIR += @LDIR_FLAGS@
+    CONFIG_SYSTEM_INCL += @CPPFLAGS@
 
     GNUSTEP_BASE_VERSION = @VERSION@
     GNUSTEP_BASE_MAJOR_VERSION = @MAJOR_VERSION@
